# joe

./: .gitignore  Makefile  Makefile.in  README.md  install.py  meson.build
common/: Makefile  Makefile.dep
common/include/: Adt.h  AtmosphericCond.h  Average.h  Gp.h  Logging.h  MiscUtils.h  MpiStuff.h  MshFilter.h  Param.h  PetscSolver.h  Ugp.h  UgpWithCv2.h  UgpWithTools.h  myMem.h  tc_vec3d.h
common/src/: Gp.cpp  Logging.cpp  MiscUtils.cpp  MpiStuff.cpp  MshFilter.cpp  Param.cpp  Ugp.cpp  UgpWithCv2.cpp  UgpWithTools.cpp  tc_vec3d.cpp  test.cpp
joe/: Makefile  Makefile.dep
joe/include/: JoeWithModels.h  JoeWithModelsAD.h  UgpWithCvCompFlow.h  UgpWithCvCompFlowAD.h
joe/src/: JoeWithModels.cpp  JoeWithModelsAD.cpp  Scalars.cpp  ScalarsAD.cpp  UgpWithCvCompFlow.cpp  UgpWithCvCompFlowAD.cpp  __bkp__JoeWithModelsAD.cpp
